# pm

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md
.claude/: ralph-loop.local.md
backend/: AGENTS.md  pyproject.toml
backend/app/: __init__.py  ai.py  deepseek.py  main.py  storage.py
backend/static/: index.html
backend/tests/: test_ai.py  test_auth.py  test_boards.py  test_deepseek.py  test_main.py  test_storage.py
docs/: ACCEPTANCE.md  ACCEPTANCE.zh.md  AI.md  AUTH.md  DATABASE.md  PLAN.md  PLAN.zh.md  RUNNING.md  RUNNING.zh.md  code_review.md
frontend/: AGENTS.md  README.md  next.config.ts
frontend/src/app/: globals.css
frontend/src/components/: AiChatSidebar.tsx  AppShell.test.tsx  AppShell.tsx  BoardSwitcher.test.tsx  BoardSwitcher.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanCardPreview.tsx  KanbanColumn.tsx  NewCardForm.tsx  Workspace.tsx
frontend/src/lib/: aiApi.ts  authClient.test.ts  authClient.ts  boardApi.test.ts  boardApi.ts  kanban.ts
frontend/tests/: kanban.spec.ts
proof/: SUMMARY.txt
scripts/: AGENTS.md  start-linux.sh  start-mac.sh  start-windows.ps1  stop-linux.sh  stop-windows.ps1
strategy/: PRODUCT_EVOLUTION.zh.md  VIBE_CODING_WORKFLOW.zh.md
