[project]
name = "pm-backend"
version = "0.1.0"
description = "FastAPI backend for the Project Management MVP."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.46.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.uv]
package = false
