[project]
name = "pm-backend"
version = "0.1.0"
description = "FastAPI backend for the Project Management MVP."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.46.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "coverage[toml]>=7.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.uv]
package = false
